kubernetes/yml/volos/pilot/08000-simavi-dtm-run.yml
## DTM Deployment ##
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: dtm-deployment
    labels:
      app: simavi-sphinx
      sphinx-component: dtm
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: simavi-sphinx
    template:
      metadata:
        labels:
          app: simavi-sphinx
          sphinx-component: dtm
      spec: 
        hostNetwork: true
        containers:
          - name: dtm-deployment
            command: ["/bin/sh"]
            args: ["-c", "while true; do echo hello; sleep 10;done"]
            image: registry.sphinx-repo.intracom-telecom.com/sphinx-project/data-traffic-monitoring/dtm-deployment:latest
            imagePullPolicy: Always
            securityContext:
              capabilities:
                add:
                  - NET_RAW
                  - NET_ADMIN
            #resources:
            #  limits:
            #    memory: "4Gi"
            ports:
            - containerPort: 8087
        imagePullSecrets:
          - name: intracom-repository

## DTM Service ##
---
  apiVersion: v1
  kind: Service
  metadata:
    name: dtm-service
  spec:
    selector:
      app: simavi-sphinx
      sphinx-component: dtm
    ports:
      - protocol: TCP
        port: 8087
        targetPort: 8087
