kubernetes/yml/volos/pilot/dtm-ingress-volos-ext.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dtm-ext 
spec:
  ingressClassName: nginx
  rules:
  - host: 94.70.166.143.nip.io
    http:
      paths:
      - path: /sphinx/dtm
        pathType: Prefix
        backend:
          service:
            name: dtm-service
            port:
              number: 8087
