kubernetes/yml/volos/pilot/dtm-ingress-volos.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dtm
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: 10.10.2.60.nip.io
    http:
      paths:
      - path: /sphinx/dtm
        backend:
          serviceName: dtm-service 
          servicePort: 8087
